# Service_mailing

./: .env.sample  README.md  blog_data.json  pyproject.toml  service_data.json
blog/: admin.py  models.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blog_preview.py
config/: settings.py  urls.py
service/: admin.py  forms.py  models.py  services.py  urls.py  views.py
service/management/commands/: runapscheduler.py
service/migrations/: 0001_initial.py  0002_logs_response.py  0003_alter_mailing_interval_alter_mailing_status.py  0004_alter_mailing_options_client_user_mailing_user_and_more.py
service/templates/service/: base.html  client_form.html  client_list.html  home.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  message_confirm_delete.html  message_detail.html  message_list.html
users/: models.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py
users/templates/users/: login.html  register.html  success_verify.html  user_form.html  users_list.html  verify_message.html
