[tool.poetry]
name = "course-work-6"
version = "0.1.0"
description = ""
authors = ["dmitriyalushkin <pantific37@mail.ru>"]
readme = "README.md"
packages = [{include = "course_work_6"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
psycopg2-binary = "^2.9.9"
ipython = "^8.19.0"
django-apscheduler = "^0.6.2"
pytz = "^2023.3.post1"
python-dotenv = "^1.0.0"
django-crispy-forms = "^2.1"
apscheduler = "^3.10.4"
asgiref = "^3.7.2"
redis = "^5.0.1"
six = "^1.16.0"
sqlparse = "^0.4.4"
tzdata = "^2023.4"
tzlocal = "^5.2"
pillow = "^10.1.0"
django-dump-load-utf8 = "^0.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
